chore(ci): add semantic release and publish workflow
Configured semantic-release for automated version management and package publishing. Added:
- Semantic release configuration in package.json
- GitHub Actions workflow for CI/CD
- Contributing guidelines with commit message conventions

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "lint:fix": "eslint src --ext .ts --fix",
     "typecheck": "tsc --noEmit",
-    "publish": "npm publish --access public"
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "typescript",
@@ -30,6 +30,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
@@ -37,11 +39,26 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
+    "semantic-release": "^23.0.2",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3",
     "vitest": "^2.1.9"
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "release": {
+    "branches": ["main"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
   }
 }
