--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,18 @@ jobs:
               with:
                   node-version: '20'
                   registry-url: 'https://registry.npmjs.org'
+                  cache: 'npm'
 
-            - name: Install dependencies
-              run: npm ci
+            - name: Install dependencies and generate package-lock.json
+              run: |
+                  npm install
+                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                  git config --global user.name "github-actions[bot]"
+                  if [[ -n $(git status --porcelain package-lock.json) ]]; then
+                    git add package-lock.json
+                    git commit -m "chore: generate package-lock.json [skip ci]"
+                    git push
+                  fi
 
             - name: Run tests
               run: npm run test
