--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,29 +11,39 @@ on:
 jobs:
     build-and-publish:
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
+            packages: write
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-                  persist-credentials: false
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: '20'
                   registry-url: 'https://registry.npmjs.org'
-                  cache: 'npm'
 
-            - name: Install dependencies and generate package-lock.json
+            - name: Install dependencies
+              run: npm install
+
+            - name: Cache dependencies
+              uses: actions/cache@v4
+              with:
+                  path: ~/.npm
+                  key: npm-${{ hashFiles('package-lock.json') }}
+                  restore-keys: npm-
+
+            - name: Commit package-lock.json if changed
               run: |
-                  npm install
-                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
-                  git config --global user.name "github-actions[bot]"
                   if [[ -n $(git status --porcelain package-lock.json) ]]; then
+                    git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                    git config --global user.name "github-actions[bot]"
                     git add package-lock.json
                     git commit -m "chore: generate package-lock.json [skip ci]"
-                    git push
+                    git push origin HEAD:main
                   fi
 
             - name: Run tests
