--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,18 +13,22 @@ jobs:
         runs-on: ubuntu-latest
         permissions:
             contents: write
+            issues: write
+            pull-requests: write
+            id-token: write
             packages: write
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: '20'
-                  registry-url: 'https://registry.npmjs.org'
+                  registry-url: 'https://registry.npmjs.org/'
 
             - name: Install dependencies
               run: npm install
@@ -62,5 +66,6 @@ jobs:
               if: github.event_name == 'push' && github.ref == 'refs/heads/main'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
               run: npx semantic-release
